<resources>
    <string name="app_name">file-downloader</string>
    <string name="targetlistapi_endpoint">TargetListApi Endpoint</string>
    <string name="startprocess">StartProcess</string>
    <string name="save">Save</string>
    <string name="gcp_client_id_text">GCP ClientID</string>
    <string name="gcp_client_secret">GCP Client Secret</string>
    <string name="gcp_options">GCP Options</string>
    <string name="target_api_options">Target API Options</string>
    <string name="gcp_auth">Auth</string>
    <string name="gcp_callback_url">GCP Callback Url</string>
    <string name="grant_storage_permission">Grant Storage Permission</string>
</resources>